Adjusting css so links and containing li overlap perfectly, so :hover behavior works correctly

--- a/resources/css/navbar.css
+++ b/resources/css/navbar.css
@@ -13,7 +13,6 @@ nav ul li {
     min-width: 100px;
     max-width: 300px;
     margin-top: 20px;
-    padding: 10px 0;
     border: 1px solid seagreen;
     background-color: seagreen;
     color: whitesmoke;
@@ -24,6 +23,9 @@ nav ul li {
 nav a {
     color: whitesmoke;
     text-decoration: none;
+    display: block;
+    width: 100%;
+    height: 100%;
     padding: 10px;
 }
 
